--- a/arch/arm/mach-imx/mx6/Kconfig
+++ b/arch/arm/mach-imx/mx6/Kconfig
@@ -383,6 +383,14 @@ config TARGET_UDOO_NEO
 	select DM
 	select DM_THERMAL
 
+config TARGET_ILLYSKY_NETHOOT
+	bool "Illysky Nethoot"
+	select BOARD_LATE_INIT
+	select SUPPORT_SPL
+	select MX6SX
+	select DM
+	select DM_THERMAL
+
 config TARGET_SAMTEC_VINING_2000
 	bool "samtec VIN|ING 2000"
 	select BOARD_LATE_INIT
@@ -470,6 +478,7 @@ source "board/toradex/apalis_imx6/Kconfig"
 source "board/toradex/colibri_imx6/Kconfig"
 source "board/udoo/Kconfig"
 source "board/udoo/neo/Kconfig"
+source "board/illysky/nethoot/Kconfig"
 source "board/wandboard/Kconfig"
 source "board/warp/Kconfig"
 
